# LuxCoreWheel

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  ccache.conf  conan_profile  conan_profile_Linux_X64  conan_profile_Windows_X64  conan_profile_libvpx  conan_profile_macOS_ARM64  conan_profile_macos  conanfile.py  conanfile.txt  debug.sh  pyproject.toml  requirements.txt  sccache.conf  sccache_config  vcpkg.json  windows.cmake
.github/actions/all-build-system/: action.yml
.github/actions/all-clean-tree/: action.yml
.github/actions/linux-build-system/: action.yml
.github/actions/linux-clean-tree/: action.yml
.github/actions/macos-build-system/: action.yml
.github/actions/macos-clean-tree/: action.yml
.github/actions/prepare-for-windows/: action.yml
.github/actions/windows-boost-python/: action.yml
.github/actions/windows-build-system/: action.yml
.github/actions/windows-clean-tree/: action.yml
.github/actions/windows-oidn/: action.yml
.github/actions/windows-python-deps/: action.yml
.github/workflows/: CMakePresets.json  wheels.yml  wheels_windows.yml
conan-cache/: dummy.txt
conan-profiles/: conan-profile-Linux-X64  conan-profile-Windows-X64  conan-profile-common  conan-profile-macOS-ARM64  conan-profile-macOS-X64
conan_cache/: dummy.txt
conan_profiles/: conan_profile_Linux_X64  conan_profile_Windows_X64  conan_profile_macOS_ARM64  conan_profile_macOS_X64  myvars.cmake
configs/: Config_Windows-Wheel.cmake
doc/: notes.md
python/pyluxcore/: __init__.py
scripts/: before_all_linux.sh  before_all_windows.bat  before_build_linux.sh  before_build_macos.sh  before_build_windows.sh  install_conan.sh  patch_source_tree.sh  prepare_cache_linux.sh  recompose_wheel_linux.py  recompose_wheel_windows.py  repair_wheel_windows.sh  yasm
src/pyluxcore/: __init__.py
src/pyluxcoredemo/: __init__.py  pyluxcoredemo.py
src/pyluxcoretest/: pyluxcoretest.py
tests/: luxball_MATERIAL_ID_COLOR.png.bak  normal.png.bak  pyluxcoredemo.py  strands_shape.ply  test-resume.png.bak  test.rst
