# SPDX-FileCopyrightText: 2024 Howetuft
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pyluxcore"
version = "2.9.alpha1"
dependencies = ["numpy<2"]
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{name="Howetuft"}]
# See https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 7 - Inactive",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]
readme = "./LuxCore/README.md"
keywords = ["raytracing", "ray tracing", "rendering", "pbr", "path tracing"]

[project.urls]
Homepage = "https://luxcorerender.org/"
Repository = "https://github.com/LuxCoreRender/LuxCore"

[tool.scikit-build]
logging.level = "DEBUG"
cmake.verbose = true
cmake.source-dir = "./LuxCore"
cmake.targets = ["pyluxcore"]
cmake.build-type = "Release"
wheel.cmake = true
wheel.packages = [
  "./LuxCore/pywheel",
]

# Defines
[tool.scikit-build.cmake.define]
OpenGL_GL_PREFERENCE = "LEGACY"
CMAKE_VERBOSE_MAKEFILE = "ON"
CMAKE_C_COMPILER_LAUNCHER = "sccache"
CMAKE_CXX_COMPILER_LAUNCHER = "sccache"

[[tool.scikit-build.overrides]]
if.platform-system = "linux"
cmake.define.LUXRAYS_CUSTOM_CONFIG = "Config_Linux-Wheel"

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.define.LUXRAYS_CUSTOM_CONFIG = "Config_Windows"
cmake.define.CMAKE_INCLUDE_PATH = "D:\\a\\LuxCoreWheel\\WindowsCompileDeps\\include"
cmake.define.CMAKE_LIBRARY_PATH = "D:\\a\\LuxCoreWheel\\WindowsCompileDeps\\x64\\Release\\lib"
cmake.define.PYTHON_LIBRARY = "D:\\a\\LuxCoreWheel\\WindowsCompileDeps\\x64\\Release\\lib"
cmake.define.PYTHON_V = "3.10"
cmake.define.PYTHON_INCLUDE_DIR = "D:\\a\\LuxCoreWheel\\WindowsCompileDeps\\include\\Python3.10"
cmake.define.BUILD_LUXCORE_DLL = "1"
cmake.define.CMAKE_GENERATOR = "Visual Studio 16 2019"
cmake.args=["-A x64", "-T v142,host=x64"]

# For convenience, all cibuildwheel settings are located in github workflow